# zope.mimetype

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: codec.rst  conf.py  constraints.rst  contentinfo.rst  event.rst  index.rst  intro.rst  requirements.txt  retrieving_mime_types.rst  source.rst  typegetter.rst  utils.rst  widget.rst
docs/api/: index.rst
src/zope/mimetype/: DEPENDENCIES.cfg  README.rst  README.txt  TODO.rst  __init__.py  codec.py  codec.rst  codec.txt  configure.rst  configure.txt  configure.zcml  constraints.rst  constraints.txt  contentinfo.py  contentinfo.rst  contentinfo.txt  event.py  event.rst  event.txt  ftesting.zcml  i18n.py  interfaces.py  meta.zcml  mtypes.py  retrieving_mime_types.rst  retrieving_mime_types.txt  source.py  source.rst  source.txt  testing.py  tests.py  typegetter.py  typegetter.rst  typegetter.txt  types.csv  types.py  utils.py  utils.rst  utils.txt  widget.py  (+3 more)
src/zope/mimetype/tests/: __init__.py  test_codec.py  test_contentinfo.py  test_doctests.py  test_source.py  test_typegetter.py  test_zcml.py
