# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 82",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "zope.mimetype"
version = "4.1.dev0"
description = "A simple package for working with MIME content types"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Zope :: 3",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "zope.component",
    "zope.configuration",
    "zope.contenttype>=3.5",
    "zope.event",
    "zope.i18n",
    "zope.i18nmessageid",
    "zope.interface",
    "zope.schema",
    "zope.security",
]
keywords = ["file", "content", "mimetype"]

[project.optional-dependencies]
test = [
    "zope.browser",
    "zope.browserresource",
    "zope.formlib>=4.0",
    "zope.publisher",
    "zope.testing",
    "zope.testrunner >= 6.4",
]
browser = [
    "zope.browser",
    "zope.browserresource",
    "zope.formlib>=4.0",
    "zope.publisher",
]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
    "repoze.sphinx.autointerface",
    "zope.browser",
    "zope.browserresource",
    "zope.formlib>=4.0",
    "zope.publisher",
]

[project.urls]
Source = "https://github.com/zopefoundation/zope.mimetype"
Documentation = "https://zopemimetype.readthedocs.io"
Changelog = "https://raw.githubusercontent.com/zopefoundation/zope.mimetype/master/CHANGES.rst"
Issues = "https://github.com/zopefoundation/zope.mimetype/issues"

[tool.coverage.run]
branch = true
source = ["zope.mimetype"]

[tool.coverage.report]
fail_under = 99
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}


[tool.zest-releaser]
create-wheel = false
upload-pypi = false
